welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:3: error: value a is not a member of Int
  for (c <- 1 a 4){
              ^