welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
  baisseBrosse()
  for (c <- 1 a 4){
    avance()
		avance()
		left()
  }
  leveBrosse()
}